--- a/app/templates/profile/user/edit.html
+++ b/app/templates/profile/user/edit.html
@@ -15,7 +15,7 @@
   <section class="modal-card-body has-text-centered">
 
   <div id="edit-associate-image">
-      <img draggable="false" id="edit-associate-image-content" src="{{ user.profile_photo.src }}">
+      <img draggable="false" id="edit-associate-image-content" src="{{ user.photo.src }}">
       <input type="file"  accept="image/*" name="image" id="upload-image" onchange="loadImage(event,'#edit-associate-image-content');" style="display: none;">
     <button class="button is-large is-white" id="edit-associate-image-upload">
     <span class="icon is-medium">
