--- a/app/templates/idea/create.html
+++ b/app/templates/idea/create.html
@@ -29,10 +29,10 @@
       <h1><b>Handle</b></h1>
         <div class="field has-addons">
           <p class="control">
-          <a class="button is-static">$</a>
+          <a class="button is-static">€</a>
           </p>
           <p class="control" style="width:100%;">
-          <input class="input has-fixed-size" placeholder="Add the handle of your idea" id="handle-field" autocapitalize="none" style="text-transform: lowercase;"></input>
+          <input class="input has-fixed-size" placeholder="Add the handle of your idea" id="handle-field"></input>
           </p>
         </div>
     </div>
