--- a/app/templates/profile/user/tabs/tab1.html
+++ b/app/templates/profile/user/tabs/tab1.html
@@ -4,5 +4,5 @@
         {% endwith %}
 {% endfor %}
       {% if user==current_user %}
-      <a href="/explore/"><div class="add-specific-button"><span>Add ally</span></div></a>
+      <a href="/explore/"><div class="add-specific-button"><span>Add associate</span></div></a>
 {% endif %}
