--- a/app/templates/profile/user/tabs/tabs.html
+++ b/app/templates/profile/user/tabs/tabs.html
@@ -1,3 +1,3 @@
-{% with tab1contentpath="profile/user/tabs/tab1.html", tab2contentpath="profile/user/tabs/tab2.html", tab1name="Allies", tab2name="Ideas", tab1icon="fas fa-user-friends", tab2icon="fas fa-lightbulb" %}
+{% with tab1contentpath="profile/user/tabs/tab1.html", tab2contentpath="profile/user/tabs/tab2.html", tab1name="Associates", tab2name="Ideas", tab1icon="fas fa-user-friends", tab2icon="fas fa-lightbulb" %}
 {% include "profile/tabs.html" %}
 {% endwith %}
