--- a/app/templates/navbar/navbar.html
+++ b/app/templates/navbar/navbar.html
@@ -25,3 +25,6 @@
 <div id="more" class="transition invisible">
       {% include 'navbar/navbar-more.html' %}
 </div>
+<div id="wallet-details" class="transition invisible content box">
+      {% include 'navbar/wallet-details.html' %}
+</div>
