--- a/app/templates/navbar/exonavbar.html
+++ b/app/templates/navbar/exonavbar.html
@@ -16,5 +16,8 @@
     <div id="more" class="transition invisible">
       {% include 'navbar/navbar-more.html' %}
     </div>
+    <div id="wallet-details" class="transition invisible content box">
+      {% include 'navbar/wallet-details.html' %}
+    </div>
   </div>
 </div>
