--- a/app/static/css/navbar/navbar.css
+++ b/app/static/css/navbar/navbar.css
@@ -32,6 +32,10 @@
     overflow-x: auto;
 }
 
+#navbar-menu-id {
+    flex-direction: row-reverse;
+}
+
 @media screen and (min-width: 0px) and (max-width: 1024px) {
     .navbar>.container {
         align-items: stretch;
@@ -46,7 +50,7 @@
         background-color: transparent;
         box-shadow: none;
         padding: 0;
-        justify-content: flex-end;
+        justify-content: flex-start;
         flex-grow: 1;
         flex-shrink: 0;
     }
@@ -56,7 +60,7 @@
     }
 
     .navbar-end {
-    	justify-content: flex-end;
+    	justify-content: flex-start;
     margin-left: auto;
     }
 
