--- a/app/templates/navbar/wallet-details.html
+++ b/app/templates/navbar/wallet-details.html
@@ -1,3 +1,9 @@
 <div class="item">
 <p>You can insert <strong>any type of content</strong> within the menu.</p>
 </div>
+<button class="button transition is-light" id="connect-wallet-button" style="width:100%;">
+      <span class="text">Connect</span>
+    <span class="icon">
+      <i class="fas fa-wallet"></i>
+    </span>
+</button>
