--- a/app/templates/navbar/wallet-details.html
+++ b/app/templates/navbar/wallet-details.html
@@ -1,5 +1,5 @@
 <div class="item">
-<strong>ETH</strong> <p id="eth-balance"></p>
+<strong style="display:inline-block;margin-right:10px;">ETH</strong> <p id="eth-balance" style="display:inline-block;margin-right:10px;"></p>
 </div>
 <button class="button transition is-light" id="connect-wallet-button" style="width:100%;">
     <span class="text">Connect</span>
