--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -24,113 +24,61 @@
   <div class="hero-body" style="max-width: 1080px; margin: auto; padding:0px;">
   <h1 class="title is-2 is-spaced"><i>The</i> meeting place</h1>
   <h2 class="subtitle">
-    As a promising online meeting platform, <strong>Counekt</strong> seeks to provide <strong>entrepreneurs</strong> and likeminded with a <strong>flexible network</strong> as a tool to realise their <strong>ideas</strong> with. We are for the most a student <strong>startup</strong> comprised of just four friends. Two of us being from <strong>Copenhagen, Denmark</strong>, one from <strong>Atlanta, United States</strong>, and one from <strong>Paris, France</strong> - We are a <strong>global</strong> company. This is only the beginning of something <i>hopefully</i> great. 
+    As a promising online meeting platform, <strong>Counekt</strong> seeks to provide <strong>entrepreneurs</strong> and likeminded with a <strong>flexible network</strong> as a tool to realise their <strong>ideas</strong> with.
   </h2>
   <div class="columns" style="margin: auto;">
-  <div class="column">
-   <div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-    </figure>
-  </div>
-  <div class="card-content">
-    <div class="media">
-      <div class="media-left">
-        <figure class="image is-48x48">
-          <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+      <div class="column">
+         <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+              </figure>
+            </div>
+          <div class="card-content">
+            <div class="media">
+              <div class="media-left">
+                <figure class="image is-48x48">
+                  <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                </figure>
+              </div>
+              <div class="media-content">
+                <p class="title is-4">Frederik Walther Liberoth Christoffersen</p>
+                <p class="subtitle is-6">@frederik</p>
+              </div>
+            </div>
+
+            <div class="content">
+              The developer behind it all.
+           </div>
+        </div>
+      </div>
+      </div>
+      <div class="column">
+        <div class="card">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
         </figure>
       </div>
-      <div class="media-content">
-        <p class="title is-4">Nicolaj Terndrup Christensen</p>
-        <p class="subtitle is-6">@nicolaj</p>
-      </div>
-    </div>
+      <div class="card-content">
+        <div class="media">
+          <div class="media-left">
+            <figure class="image is-48x48">
+              <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+            </figure>
+          </div>
+          <div class="media-content">
+            <p class="title is-4">Theo Lemle</p>
+            <p class="subtitle is-6">@theo</p>
+          </div>
+        </div>
 
-    <div class="content">
-      The mysterious question mark. He's like a pokémon - What will he evolve into? Time will tell.
-    </div>
-  </div>
-</div>
-  </div>
-  <div class="column">
-   <div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-    </figure>
-  </div>
-  <div class="card-content">
-    <div class="media">
-      <div class="media-left">
-        <figure class="image is-48x48">
-          <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-        </figure>
-      </div>
-      <div class="media-content">
-        <p class="title is-4">Frederik Walther Liberoth Christoffersen</p>
-        <p class="subtitle is-6">@frederik</p>
+        <div class="content">
+          The wise grown-up with real life experience. Currently researching the field of decentralized finance.
+        </div>
       </div>
     </div>
-
-    <div class="content">
-      The developer behind it all.
-   </div>
-  </div>
-</div>
-  </div>
-  <div class="column">
-    <div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-    </figure>
-  </div>
-  <div class="card-content">
-    <div class="media">
-      <div class="media-left">
-        <figure class="image is-48x48">
-          <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-        </figure>
       </div>
-      <div class="media-content">
-        <p class="title is-4">Theo Lemle</p>
-        <p class="subtitle is-6">@theo</p>
-      </div>
-    </div>
-
-    <div class="content">
-      The wise grown-up with real life experience. Currently researching the field of decentralized finance.
-    </div>
-  </div>
-</div>
-  </div>
-  <div class="column">
-    <div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-    </figure>
-  </div>
-  <div class="card-content">
-    <div class="media">
-      <div class="media-left">
-        <figure class="image is-48x48">
-          <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-        </figure>
-      </div>
-      <div class="media-content">
-        <p class="title is-4">Julie Catteau</p>
-        <p class="subtitle is-6">@julie</p>
-      </div>
-    </div>
-
-    <div class="content">
-      The co-developer with a real life education in softare development on the way.
-    </div>
-  </div>
-</div>
-  </div>
 </div>
 </div>
 </section>
