--- a/app/templates/idea/tabs/tabs.html
+++ b/app/templates/idea/tabs/tabs.html
@@ -1,3 +1,3 @@
-{% with tab1contentpath="profiles/idea/tabs/tab1.html", tab2contentpath="profiles/idea/tabs/tab2.html", tab3contentpath="profiles/idea/tabs/tab3.html", tab1name="Contributors", tab2name="Roles", tab3name="Comms", tab1icon="fas fa-group", tab2icon="fab fa-black-tie", tab3icon="fas fa-wifi" %}
-{% include "profiles/tabs.html" %}
+{% with tab1contentpath="idea/tabs/tab1.html", tab2contentpath="idea/tabs/tab2.html", tab3contentpath="idea/tabs/tab3.html", tab1name="Contributors", tab2name="Roles", tab3name="Comms", tab1icon="fas fa-group", tab2icon="fab fa-black-tie", tab3icon="fas fa-wifi" %}
+{% include "profile/tabs.html" %}
 {% endwith %}
