--- a/app/templates/idea/tabs/tab2.html
+++ b/app/templates/idea/tabs/tab2.html
@@ -2,6 +2,6 @@
 
 {% endfor %}
       
-{% if idea.group.member_has_permission(current_user,"permissionToCreateRoles") %}
+{% if True and 'idea.group.member_has_permission(current_user,"permissionToCreateRoles")' %}
 <div class="add-specific-button" id="create-role-button"><span>Add role</span></div>
 {% endif %}
