--- a/app/templates/profile/user/tabs/tab2.html
+++ b/app/templates/profile/user/tabs/tab2.html
@@ -1,6 +1,6 @@
 {% for idea in user.ideas %}
         {% with profile=idea %}
-        {% include 'profiles/mini-profile.html' %}
+        {% include 'profile/mini-profile.html' %}
         {% endwith %}
 {% endfor %}
       
