--- a/app/templates/idea/timeline.html
+++ b/app/templates/idea/timeline.html
@@ -8,11 +8,13 @@
         </span>
       </a>
       <p class="modal-card-title" id="header">Timeline of {{idea.name}}</p>
-      <button class="button loading-button is-info is-normal is-rounded" id="reload-timeline">
-        <span class="icon is-small">
-          <i class="fa fa-refresh"></i>
-        </span>
-      </button>
+      <p class="control">
+        <button class="button loading-button is-info is-normal is-rounded" id="reload-timeline">
+          <span class="icon is-small">
+            <i class="fa fa-refresh"></i>
+          </span>
+        </button>
+    </p>
   </header>
   <section class="modal-card-body has-text-centered">
   
